# rules_pkg

./: .bazelignore  .bazelrc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  BUILD  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  build_tar.py  build_zip.py  deps.bzl  developers.md  go.mod  go.sum  install.bzl  make_deb.py  make_rpm.py  mappings.bzl  package_variables.bzl  patching.md  pkg.bzl  providers.bzl  rpm.bzl  version.bzl
.bazelci/: examples.yml  examples_naming.yml  examples_rich_structure.yml  examples_stamping.yml  expand_yml.py  integration.yml  presubmit.yml  showyml.py  tests.yml  tests_bzlmod.yml
.bcr/: README.md  config.yml  metadata.template.json  presubmit.yml  source.template.json
.claude/: settings.local.json
.github/workflows/: checks.sh  checks.yml  publish_to_bcr.yml  release.yml  release_module.yml  release_prep.sh  scorecard.yml
contrib/alma9_rpmbuild_docker/: run.sh
contrib/tools/: BUILD  README.md  compare_test.py  cpio-ls.py  readers_test.py  rpm2cpio.py  rpm_build.py  rpm_info.py  tree_size_compare.py
datadog_test/dd_tar_writer/: BUILD.bazel  REQUIREMENTS.md  go.mod  main_test.go
deb_packages/: AUTHORS  BUILD  README.md  WORKSPACE  deb_packages.bzl
deb_packages/tools/: README.md
distro/: BUILD  packaging_test.py
distro/testdata/: BUILD.tpl
doc_build/: BUILD  common.md  merge.py  toc.md.tpl
docs/: index.md  latest.md  pkg_deb.md
docs/0.10.0/: reference.md
docs/0.4.0/: reference.md
docs/0.5.0/: reference.md
docs/0.6.0/: reference.md
docs/0.8.0/: reference.md
docs/0.9.1/: reference.md
docs/1.0.1/: reference.md
docs/_includes/: head-custom.html  head.html
examples/: MODULE.bazel  README.md  WORKSPACE
examples/bzlmod/: BUILD.bazel  MODULE.bazel  README.md
examples/deb_packages/: README.md
examples/deb_packages/deb_packages_base/: BUILD
examples/naming_package_files/: BUILD  MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod  my_package_name.bzl  package_upload.bzl  readme.md
examples/prebuilt_rpmbuild/: BUILD  WORKSPACE  readme.md  test_rpm.spec
examples/prebuilt_rpmbuild/local/: BUILD  rpmbuild.bzl
examples/rich_structure/: BUILD  README.md  WORKSPACE  foo_defs.bzl  readme.md
examples/rich_structure/docs/: BUILD  index.md
examples/rich_structure/resources/l10n/: BUILD
examples/rich_structure/src/client/: BUILD
examples/rich_structure/src/server/: BUILD
examples/rpm/: BUILD
examples/rpm/debuginfo/: BUILD  README.md
examples/rpm/main/: BUILD  hello_world.cc  hello_world.py
examples/rpm/nospecfile/: BUILD
examples/rpm/prebuilt_rpmbuild/: BUILD
examples/rpm/prebuilt_rpmbuild/local/: BUILD
examples/rpm/prebuilt_rpmbuild/local/lib/rpm/: macros  platform  rpmrc
examples/rpm/subrpm/: BUILD
examples/rpm/system_rpmbuild/: WORKSPACE
examples/rpm/system_rpmbuild_bzlmod/: MODULE.bazel
examples/rpm/system_rpmbuild_stamp_bzlmod/: BUILD  MODULE.bazel  README.md
examples/time_stamping/: BUILD  WORKSPACE  readme.md
examples/where_is_my_output/: BUILD  README.md  WORKSPACE  readme.md  show_all_outputs.bzl  show_deb_outputs.bzl
migration/: BUILD  migrate_strip_prefix.py  migration_deps.txt  migration_deps_lock.txt
pkg/: .bazelignore  .bazelrc  BUILD  CHANGELOG.md  README.md  WORKSPACE  api.bzl  archive.py  build_tar.py  build_zip.py  deb.bzl  deps.bzl  filter_directory.py  genpkg.bzl  helpers.py  install.bzl  make_deb.py  make_rpm.py  mappings.bzl  package_content.bzl  package_naming.bzl  package_variables.bzl  path.bzl  pkg.bzl  pkg_deb.bzl  pkg_deb.md  providers.bzl  rpm.bzl  rpm_pfg.bzl  tar.bzl  validate_package.bzl  verify_archive.bzl  verify_archive_test_lib.py  verify_archive_test_main.py.tpl  version.bzl  zip.bzl
pkg/distro/: BUILD  packaging_test.py  print_rel_notes.py  release_tools.py  release_version.py
pkg/docs/: reference.md
pkg/examples/: readme.md
pkg/experimental/: BUILD  augment_rpm_files_install.py  genpkg.bzl  make_rpm.py  pkg_filegroup.bzl  rpm.bzl  template.spec.in
pkg/internal/: BUILD  build_info.py  util.bzl
pkg/legacy/: BUILD  rpm.bzl
pkg/new/: BUILD  rpm.bzl  template.spec.in
pkg/private/: BUILD  archive.py  build_info.py  build_tar.py  build_zip.py  helpers.py  install.py.tpl  make_deb.py  make_starlark_library.bzl  manifest.py  pkg_files.bzl  pkg_files_new.bzl  util.bzl
pkg/releasing/: BUILD  defs.bzl  git.bzl  git_changelog_private.py  print_rel_notes.py  release_tools.py  release_tools_test.py
pkg/rename_skylib_example/: BUILD  lib.cc  my_rule.bzl
pkg/rpm/: BUILD  template.spec.tpl
pkg/tests/: BUILD  archive_test.py  build_test.sh  build_test_deb.sh  build_test_tar.sh  compressor.py  genpkg_test.bzl  helpers_test.py  (+13 more)
providers/: BUILD  MODULE.bazel  version.bzl
releasing/: BUILD  release_tools.py
tests/: BUILD  archive_test.py  build_test.sh  foo.cc  helpers_test.py  is_compressed_test.py  make_rpm_test.py  my_package_name.bzl  package_naming_aggregate_test.sh  path_test.bzl  path_test.py  pkg_tar_test.py  stamp_test.py  zip_test.py
tests/mappings/symlink/: BUILD.bazel  node_modules_tree.bzl
toolchains/: BUILD  BUILD.tpl  rpmbuild.bzl  rpmbuild_configure.bzl
tools/: BUILD  README.md  compare_test.py  cpio-ls.py  readers_test.py  rpm2cpio.py  tree_size_compare.py
(+221 files in other folders)
