# Copyright 2022 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_pkg//pkg:deb.bzl", "pkg_deb")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_deb(
    name = "example_deb",
    data = ":example_tar",
    description = "an example deb package",
    maintainer = "someone@example.com",
    package = "foo-tools",
    version = "0.0.1",
)

pkg_tar(
    name = "example_tar",
    srcs = [
        "hello.txt",
    ],
)
